[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["maelstrom-broadcast", "maelstrom-counter","maelstrom-echo", "maelstrom-kafka", "maelstrom-protocol", "maelstrom-txn", "maelstrom-unique-ids"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
